# dapps_template_cli

./: Cargo.toml  README.md
.github/workflows/: template.yml
src/: downloader.rs  main.rs
templates/contracts/erc721/: package.json
templates/contracts/erc721/contracts/: ZKNft.sol
templates/contracts/erc721/scripts/: deploy.ts
