[package]
name = "dapps_template_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.6", default-features = true }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
inquire = { version = "0.6.2" }